Incremental Transformation Does Not Match Grid [Cloned & Updated] #77819

Closed
opened 2020-06-12 23:34:47 +02:00 by shanenewville@gmail.com · 17 comments

System Information
Operating system: Windows 7 64bit Pro
Graphics card: NVIDIA GeForce 970 GTX

Blender Version
Broken: 2.83.0
Worked: 2.79

Short description of error
The first ticked I made was closed because I did not respond in time, but the issue was not resolved or acknowledged. It is still present and a minor annoyance as I am getting used to moving away from 2.79.
#77236

When in any Isometric view (front, side, top, etc) if we zoom in enough to see the smaller grid lines and hold Ctrl while moving an object or verts, it does not snap to the smaller grid until we have zoomed in even further. A User would expect to be able to use the smaller grid increments after zooming in enough to see it. What is the point in showing it if we cannot use it until until further zoom?

[2.79] In 2.79 it would start snapping to the smaller grid as soon as it was visible.
27x.webm

[2.83] In 2.83 we have to zoom in even further in order to activate snapping to the visible smaller grid.
283.webm

Exact steps for others to reproduce the error

  1. In any 3D scene press 5 to switch to isometric view. and then 1, 3 or 7 (for front, side or top view...does not matter which)
  2. Select an object and move it while holding Ctrl. Notice it snaps to the grid as expected.
  3. Zoom in until we see the smaller grid lines appear. Repeat step 2. Notice it still snaps to bigger grid instead of the visible small grid lines.
  4. Zoom in again. Notice that NOW it starts to snap to the smaller grid lines.

UPDATED INFO:
It was mentioned that "Number of steps for Zoom is not a good way to indicate the problem (if there really is a problem)."
The problem is still very present and not hard to replicate at all. I've made a new screenrecord of the issue in Blender 2.83.0 but this time using Ctrl+Click/Drag as requested. I apologize for the poor video quality, making it difficult to see the lighter colored grid.
After the first zoom the grid is visible and you can see how far I had to zoom in before it would start snapping to the grid.
Grid3.webm

**System Information** Operating system: Windows 7 64bit Pro Graphics card: NVIDIA GeForce 970 GTX **Blender Version** Broken: 2.83.0 Worked: 2.79 **Short description of error** The first ticked I made was closed because I did not respond in time, but the issue was not resolved or acknowledged. It is still present and a minor annoyance as I am getting used to moving away from 2.79. #77236 When in any Isometric view (front, side, top, etc) if we zoom in enough to see the smaller grid lines and hold Ctrl while moving an object or verts, it does not snap to the smaller grid until we have zoomed in even further. A User would expect to be able to use the smaller grid increments after zooming in enough to see it. What is the point in showing it if we cannot use it until until further zoom? [2.79] In 2.79 it would start snapping to the smaller grid as soon as it was visible. [27x.webm](https://archive.blender.org/developer/F8613004/27x.webm) [2.83] In 2.83 we have to zoom in even further in order to activate snapping to the visible smaller grid. [283.webm](https://archive.blender.org/developer/F8613005/283.webm) **Exact steps for others to reproduce the error** 1. In any 3D scene press 5 to switch to isometric view. and then 1, 3 or 7 (for front, side or top view...does not matter which) 2. Select an object and move it while holding Ctrl. Notice it snaps to the grid as expected. 3. Zoom in until we see the smaller grid lines appear. Repeat step 2. Notice it still snaps to bigger grid instead of the visible small grid lines. 4. Zoom in again. Notice that NOW it starts to snap to the smaller grid lines. UPDATED INFO: It was mentioned that "Number of steps for Zoom is not a good way to indicate the problem (if there really is a problem)." The problem is still very present and not hard to replicate at all. I've made a new screenrecord of the issue in Blender 2.83.0 but this time using Ctrl+Click/Drag as requested. I apologize for the poor video quality, making it difficult to see the lighter colored grid. After the first zoom the grid is visible and you can see how far I had to zoom in before it would start snapping to the grid. [Grid3.webm](https://archive.blender.org/developer/F8613023/Grid3.webm)

Added subscriber: @Ghost_Train

Added subscriber: @Ghost_Train

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Thansk for the report but you need to show an image or video comparing the SAME GRID size side by side in different blender versions.
As in this image. Where we can compare a difference different from that described:
Grid far.gif
2.83 left | 2.79 right

Information such as the number of zoom steps or when the grid appears does not help.

Thansk for the report but you need to show an image or video comparing the SAME GRID size side by side in different blender versions. As in this image. Where we can compare a difference different from that described: ![Grid far.gif](https://archive.blender.org/developer/F8574291/Grid_far.gif) 2.83 left | 2.79 right Information such as the number of zoom steps or when the grid appears does not help.

Its easy to see and replicate. Im not using any special configuration. Only default, add a cube, use ortho view.
In 2.79 even with the Ctrl+Click to zoom, the moment the small grid is visible, we can snap to grid.
In 2.83 the small grid is visible but it will not snap until you zoom in a decent amount more. its like it has this deadzone of faking the user out showing the small grid but it is not usable. That is really it. Once you zoom in far enough you can use it. That is not the case in 2.79 as it is usable right away when visible. Im used to being able to use it, but in 2.83 it fakes me out. I zoom in and see it then try to use it but it does not work. So I keep having to zoom in more until it works. Its just a little more inconvenient. It would be nice if it started working as soon as it was visible like it does in 2.79.

Its easy to see and replicate. Im not using any special configuration. Only default, add a cube, use ortho view. In 2.79 even with the Ctrl+Click to zoom, the moment the small grid is visible, we can snap to grid. In 2.83 the small grid is visible but it will not snap until you zoom in a decent amount more. its like it has this deadzone of faking the user out showing the small grid but it is not usable. That is really it. Once you zoom in far enough you can use it. That is not the case in 2.79 as it is usable right away when visible. Im used to being able to use it, but in 2.83 it fakes me out. I zoom in and see it then try to use it but it does not work. So I keep having to zoom in more until it works. Its just a little more inconvenient. It would be nice if it started working as soon as it was visible like it does in 2.79.

Maybe the issue is not the amount of zoom, but just that visually the grid is fading in too soon while zooming.

Maybe the issue is not the amount of zoom, but just that visually the grid is fading in too soon while zooming.

If I can't replicate and there is no GIF proving that the 2.83 incremental snap starts after blender 2.79, I can't do anything.
The GIF I attached shows the opposite (2.79 starts later).
Notice in the GIF that the grid on the right (2.83) has the same size as the grid on the left (2.79).

Perhaps there is something I did not do.
Or different distances work differently.
I is something that the bug reporter has to prove.

If I can't replicate and there is no GIF proving that the 2.83 incremental snap starts after blender 2.79, I can't do anything. The GIF I attached shows the opposite (2.79 starts later). Notice in the GIF that the grid on the right (2.83) has the same size as the grid on the left (2.79). Perhaps there is something I did not do. Or different distances work differently. I is something that the bug reporter has to prove.

Ill try to make a better gif. Im trying to find one that doesnt make it so hard to see after compression.

Ill try to make a better gif. Im trying to find one that doesnt make it so hard to see after compression.

If you still need better gif's to understand please give me a little more time. My mother has been given weeks to months to live so it has been difficult to get time for this.

If you still need better gif's to understand please give me a little more time. My mother has been given weeks to months to live so it has been difficult to get time for this.

Ok, my condolences (this must be hard).

Remembering that I am not doubting that there is a problem.
I just need to know how to reproduce the problem.
Otherwise, I can't do anything.

GIF:
Grid_problem.gif

I hope for the best.

Ok, my condolences (this must be hard). Remembering that I am not doubting that there is a problem. I just need to know how to reproduce the problem. Otherwise, I can't do anything. GIF: ![Grid_problem.gif](https://archive.blender.org/developer/F8635811/Grid_problem.gif) I hope for the best.

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

I was able to reproduce this problem.
The behavior depends on the relative dimensions of the window (if the height is greater than the width or the other way around).
I will fix it.

I was able to reproduce this problem. The behavior depends on the relative dimensions of the window (if the height is greater than the width or the other way around). I will fix it.

This issue was referenced by 5ed4e1e23a

This issue was referenced by 5ed4e1e23ab19282a8673bdeba3724026b80a880

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-11-02 20:14:32 +01:00

@Germano Cavalcante (mano-wii)
This is still present in Blender 2.91.0. Should I make a new ticket? Again we see in 2.78b as long as the smaller grid is visible (even when very faint), it is taken into account for snapping, but in 2.91 it is ignored while visible (even when close to full visibility).

Here are some better screenrecords

2.78b
B-2_79b-2020-12-24 13-01-49.mp4

2.91.0
B-2_91-2020-12-24 12-54-32.mp4

@Germano Cavalcante (mano-wii) This is still present in Blender 2.91.0. Should I make a new ticket? Again we see in 2.78b as long as the smaller grid is visible (even when very faint), it is taken into account for snapping, but in 2.91 it is ignored while visible (even when close to full visibility). Here are some better screenrecords 2.78b [B-2_79b-2020-12-24 13-01-49.mp4](https://archive.blender.org/developer/F9528421/B-2_79b-2020-12-24_13-01-49.mp4) 2.91.0 [B-2_91-2020-12-24 12-54-32.mp4](https://archive.blender.org/developer/F9528420/B-2_91-2020-12-24_12-54-32.mp4)

Added subscriber: @Germano

Added subscriber: @Germano
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77819
No description provided.