Fix T77819: Snap Incremental does not match grid in all cases

The behavior of the incremental snap did not take into account the
relative dimensions of the window, which resulted in a different behavior
if the area height was greater than the width.